--- a/Modulo_3_CSS/Dia_8/ejercicio_2/www/form.css
+++ b/Modulo_3_CSS/Dia_8/ejercicio_2/www/form.css
@@ -1,12 +1,17 @@
 form {
-    /* Sólo para centrar el formulario a la página */
-    margin: 0 auto;
-    width: 400px;
-    /* Para ver el borde del formulario */
-    padding: 1em;
-    border: 1px solid #CCC;
-    border-radius: 1em;
+  margin: 0 auto;
+  width: 400px;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 1em;
 }
 body {
-    background-color: orange;
+  background-color: orange;
+}
+input,  textarea {
+  font: 1em sans-serif;
+  width: 300px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #999;
 }
