--- a/Modulo_7_REACT/hack-a-note/src/css/components/note.css
+++ b/Modulo_7_REACT/hack-a-note/src/css/components/note.css
@@ -24,11 +24,9 @@
 
 .note .content {
   font-family: var(--font-primary);
-  padding: 1rem;
-  border: 2px solid var(--primary);
+  border: none;
   flex: 1;
   font-size: 1rem;
-  border-radius: 5px;
   background: transparent;
   outline: none;
   display: block;
@@ -37,7 +35,7 @@
   color: var(--medium);
   resize: none;
   overflow: hidden;
-  min-height: 50px;
+  min-height: 100%;
   max-height: 100%;
 }
 
@@ -106,7 +104,6 @@
 
 .note .markdown blockquote {
   margin: 10px 0;
-  border-left: 5px solid var(--primary);
   padding-left: 1rem;
 }
 
@@ -114,7 +111,6 @@
   padding: 10px;
   background-color: var(--medium);
   color: var(--dark);
-  border-radius: 5px;
   overflow: auto;
 }
 
@@ -135,8 +131,6 @@
 .note textarea {
   flex: 1;
   font-size: 1rem;
-  border: 2px solid var(--primary);
-  border-radius: 5px;
   background: transparent;
   outline: none;
   overflow: hidden;
